# my-common.hpp

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
code/: my_common.cpp  my_common.hpp
tests/: my_common_assert_test.cpp  my_common_defer_test.cpp  my_common_fixed_string_test.cpp  my_common_log_test.cpp  my_common_slice_test.cpp  my_common_span_test.cpp  my_common_string_utils_test.cpp  my_common_test.cpp  my_common_unmanaged_storage_test.cpp  my_common_vec2_test.cpp
